WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74189
WebKit should ignore images with @alt matching only whitespace
https://bugs.webkit.org/show_bug.cgi?id=74189
Summary
WebKit should ignore images with @alt matching only whitespace
chris fleizach
Reported
2011-12-09 10:57:25 PST
WebKit should ignore images with @alt matching only whitespace These are caused by <img alt=" "> (whitespace string); I think those should be treated the same way as alt="" (empty string). Ignore them completely.
Attachments
patch
(4.05 KB, patch)
2011-12-09 11:01 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-12-09 10:57:53 PST
rdar://10550385
chris fleizach
Comment 2
2011-12-09 11:01:42 PST
Created
attachment 118595
[details]
patch
Darin Adler
Comment 3
2011-12-09 11:41:14 PST
Comment on
attachment 118595
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=118595&action=review
> Source/WebCore/accessibility/AccessibilityRenderObject.cpp:1900 > + if (!alt.string().stripWhiteSpace().isEmpty())
A better way to write this is: if (!alt.string().containsOnlyWhitespace()) One subtle issue is that the containsOnlyWhitespace function uses the isASCIISpace definition of whitespace, not the HTML space definition, and there are some almost certainly irrelevant subtle differences between the two.
chris fleizach
Comment 4
2011-12-09 13:26:02 PST
http://trac.webkit.org/changeset/102470
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug