WebKit should ignore images with @alt matching only whitespace https://bugs.webkit.org/show_bug.cgi?id=74189

Reviewed by Darin Adler.

Source/WebCore:

Test: accessibility/img-alt-tag-only-whitespace.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):

LayoutTests:

* accessibility/img-alt-tag-only-whitespace.html: Added.
* platform/mac/accessibility/img-alt-tag-only-whitespace-expected.txt: Added.



Canonical link: https://commits.webkit.org/90871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102470 268f45cc-cd09-0410-ab3c-d52691b4dbfc